--- a/instagram/templates/instagram/index.html
+++ b/instagram/templates/instagram/index.html
@@ -1,12 +1,86 @@
 {% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'instagram/CSS/login.css' %}">
-    <title>My Website</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{% static 'instagram/CSS/index.css' %}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-</body>
-</html>
+        
+        <title>My Website</title>
+    </head>
+    <body>
+        <div class='main'>
+            {% include 'instagram/sidepanel.html' %}
+            <div class='content'>
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+
+                        <div class='story-image'>
+                            {% if user.profile_pic %}
+                                <img src="{{ user.profile_pic.url }}" width='90px' class="d-block" alt="Story Image">
+                               
+                            {% else %}
+                                <img src="{% static 'instagram/Images/profile_pic.png' %}" width='90px' class="d-block" alt="Default Story Image">
+                            {% endif %}
+                            <div class='story-username'>
+                                <p>{{ user.username }}</p>
+                            </div>
+                        </div>
+                        
+                        
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+                <div class='post-area  mt-2'>
+                    <div class='post'>
+                        <div class='post-header'>
+                            <div class='profile-image'>
+                                <img src="{% static 'instagram/Images/profile.jpg' %}" alt="Profile Image">
+                            </div>
+                            <div class='username'>
+                                <p>Username</p>
+                            </div>
+                        </div>
+                        <div class='post-image'>
+                            <img src="{% static 'instagram/Images/post.jpg' %}" alt="Post Image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class='Suggestions'>
+                <h3 class='suggestions-heading'>Suggested for You</h3>
+                {% for suggestion in suggestions %}
+                <div class='suggestion-card'>
+                    <div class='suggestion-profile'>
+                        
+                        <div class='suggestion-profile-pic'>
+                            {% if suggestion.profile_pic %}
+                                <img src="{{ suggestion.profile_pic.url }}" width='90px' class="d-block" alt="{{ suggestion.username }}'s Profile Picture">
+                            {% else %}
+                                <img src="{% static 'instagram/Images/profile_pic.png' %}" width='90px' class="d-block" alt="Default Profile Image">
+                            {% endif %}
+                        </div>
+                        
+                        <div class='suggestion-username'>
+                            <p>{{ suggestion.username }}</p>
+                        </div>
+                        <div class='follow-button'>
+                            <button>Follow</button>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+               
+            </div>
+        </div>
+        </body>
+</html>        
