--- a/instagram/static/instagram/CSS/index.css
+++ b/instagram/static/instagram/CSS/index.css
@@ -121,22 +121,35 @@
 }
 
 .suggestion-card {
+
     padding: 0.5rem 1rem;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    width:100%;
+}
+.suggestion-card a{
+    text-decoration: none;
+    color: #000;
 }
 
 .suggestion-profile {
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
+    position: relative; 
+}
+
+
+.suggestion-profile-pic {
+    display: flex;
+    align-items: center;
 }
 
 .suggestion-profile-pic img {
     width: 40px;
     height: 40px;
-    border-radius: 50%; /* Makes the image circular */
+    border-radius: 50%;
     margin-right: 1rem;
 }
 
@@ -146,15 +159,14 @@
     font-weight: bold;
 }
 
-.follow-button{
+.follow-button {
+    position: absolute; 
+    right: 0; 
     display: flex;
-    align-self: flex-end;
-    justify-content: flex-end;
-    justify-self: flex-end;
-    float: right;
+    align-items: center;
 }
 .follow-button button {
-    background-color: #007bff; /* Primary color */
+    background-color: #007bff;
     color: #fff;
     border: none;
     padding: 0.5rem 1rem;
