--- a/instagram/static/instagram/CSS/profile.css
+++ b/instagram/static/instagram/CSS/profile.css
@@ -49,7 +49,7 @@
     font-size: 1rem; 
     color: #333; 
 }
-.edit-button {
+.pf-button {
     background-color: #d3d3d3; /* Grey background color */
     color: #333; /* Text color */
     border: none;
@@ -60,6 +60,6 @@
     border:none;
 }
 
-.edit-button:hover {
+.pf-button:hover {
     background-color: #b0b0b0; /* Slightly darker grey on hover */
 }
