--- a/instagram/templates/instagram/profile.html
+++ b/instagram/templates/instagram/profile.html
@@ -1,44 +1,92 @@
 {% load static %}
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{% static 'instagram/CSS/index.css' %}">
-        <link rel="stylesheet" href="{% static 'instagram/CSS/profile.css' %}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <title>My Website</title>
-    </head>
-    <body>
-        <div class='main'>
-            {% include 'instagram/sidepanel.html' %}
-                <div class='profile'>
-                    <div class='profile-main'>
-                        <div class='profile-pic'>
-                            {% if user.profile_pic %}
-                                <img src="{{ user.profile_pic.url }}" alt="Profile Picture">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'instagram/CSS/index.css' %}">
+    <link rel="stylesheet" href="{% static 'instagram/CSS/profile.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>My Website</title>
+</head>
+<body>
+    <div class='main'>
+        {% include 'instagram/sidepanel.html' %}
+        <div class='profile'>
+            <div class='profile-main'>
+                <div class='profile-pic'>
+                    {% if user.profile_pic %}
+                        <img src="{{ user.profile_pic.url }}" alt="Profile Picture">
+                    {% else %}
+                        <img src="{% static 'instagram/Images/profile_pic.png' %}" alt="Default Profile Picture">
+                    {% endif %}
+                </div>
+                <div class='profile-info'>
+                    <div style='display:flex; flex-direction:row; justify-content:space-between;'>
+                        <div style='margin:1rem;'>
+                            <h2>{{ user.username }}</h2>
+                        </div>
+                        <div style='margin:1rem;'>
+                            {% if user == request.user %}
+                                <button class='pf-button'>
+                                    <a style='text-decoration:none;color:black;' href="{% url 'edit_profile' %}">Edit profile</a>
+                                </button>
                             {% else %}
-                                <img src="{% static 'instagram/Images/profile_pic.png' %}" alt="Default Profile Picture">
+                                <button class='pf-button follow-btn' data-username="{{ user.username }}">
+                                    {% if request.user in user.followers.all %}
+                                        Following
+                                    {% else %}
+                                        Follow
+                                    {% endif %}
+                                </button>
                             {% endif %}
                         </div>
-                        <div class='profile-info'>
-                            <div style='display:flex; flex-direction:row; justify-content:space-between;'>
-                                <div style='margin:1rem;'>
-                                <h2>{{ user.username }}</h2>
-                                </div>
-                                <div style='margin:1rem;'>
-                                    <button class='edit-button'><a style='text-decoration:none;color:black;' href="{% url 'edit_profile' %}">Edit profile</a></button>
-                                </div>
-                            </div>
-                            <ul class='profile-stats'>
-                                <li>Posts</li>
-                                <li>Followers</li>
-                                <li>Following</li>
-                            </ul>
-                            <p>{{ user.bio }}</p>
-                        </div>
+                        
                     </div>
+                    <ul class='profile-stats'>
+                        <li>Posts</li>
+                        <li>Followers: {{ follower_count }}</li>
+                        <li>Following: {{ following_count }}</li>
+                    </ul>
+                    <p>{{ user.bio }}</p>
                 </div>
             </div>
-    </body>
+        </div>
+    </div>
+</body>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const followButton = document.querySelector('.follow-btn');
+    
+        if (followButton) {
+            followButton.addEventListener('click', function() {
+                const username = this.getAttribute('data-username');
+                const buttonText = this.innerText.trim();
+    
+                fetch(`/follow/${username}/`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': '{{ csrf_token }}'
+                    }
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        alert(data.error);
+                    } else {
+                        if (data.action === 'followed') {
+                            followButton.innerText = 'Following';
+                        } else {
+                            followButton.innerText = 'Follow';
+                        }
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+            });
+        }
+    });
+    </script>
 </html>
