--- a/instagram/templates/instagram/sidepanel.html
+++ b/instagram/templates/instagram/sidepanel.html
@@ -8,8 +8,8 @@
             <li><a href="{% url 'home' %}"><i class="fas fa-home"></i> Home </a></li>
             <li><a href="{% url 'search' %}"><i class="fas fa-search"></i> Search </a></li>
             <li><a href="#"><i class="fas fa-plus-square"></i> Create </a></li>
-            <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile </a></li>
-            <li><a href="{% url 'login'%}"><i class="fas fa-door-open"></i> Log Out </a></li>
+            <li><a href="{% url 'profile' request.user.username %}"><i class="fas fa-user"></i> Profile </a></li>
+            <li><a href="{% url 'logout'%}"><i class="fas fa-door-open"></i> Log Out </a></li>
         </ul>
     </div>
 </div>
