--- a/instagram/templates/instagram/login.html
+++ b/instagram/templates/instagram/login.html
@@ -11,10 +11,10 @@
 
 <div class="main">
     <div class='image-holder'>
-        <img src="{% static 'instagram/images/login1.png' %}" class="fade-in">
-        <img src="{% static 'instagram/images/login2.png' %}" class="fade-in">
-        <img src="{% static 'instagram/images/login3.png' %}" class="fade-in">
-        <img src="{% static 'instagram/images/login4.png' %}" class="fade-in">
+        <img src="{% static 'instagram/Images/login1.png' %}" class="fade-in">
+        <img src="{% static 'instagram/Images/login2.png' %}" class="fade-in">
+        <img src="{% static 'instagram/Images/login3.png' %}" class="fade-in">
+        <img src="{% static 'instagram/Images/login4.png' %}" class="fade-in">
     </div>
     <div class='container'>
         <div class='login'>
